corrected icon alignment

--- a/src/WeatherTemperature.css
+++ b/src/WeatherTemperature.css
@@ -7,7 +7,6 @@
 }
 
 .temperature {
-  margin-top: 20px;
   font-weight: 400;
   font-size: 60px;
   color: #03405e;
@@ -19,8 +18,6 @@
   font-size: 16px;
   color: #0972b3;
   font-weight: 300;
-  position: relative;
   line-height: 1;
-  top: -34px;
-  margin-left: 5px;
+  display: flex;
 }
